--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/ProyectoPseudoAmazonEstruc2/v16/Browse.VC.db-shm
+/.vs/ProyectoPseudoAmazonEstruc2/v16/Browse.VC.opendb
+*.db-wal
